<resources>

    <!-- General App Strings -->
    <string name="app_name">Gait Training</string>
    <string name="GoBackButton">Go Back</string>
    <string name="CancelButtonText">Cancel</string>
    <string name="UniversityOfMaineLogoImageDescription">University of Maine Logo</string>

    <!-- Start Page Strings -->
    <string name="ForExperimentersButtonText">Menu For\nExperimenters</string>
    <string name="ForParticipantsButtonText">Menu For\nParticipants</string>
    <string name="BiomechanicsLabLogoImageDescription">Biomechanics Lab Logo</string>

    <!-- Experimenter Menu Page Strings -->
    <string name="StudySelectionMenuHeaderText">Study Selection Menu</string>
    <string name="RecordIMUDataButtonText">Record\nIMU Data</string>
    <string name="TestHapticCellsButtonText">Test\nHaptic Cells</string>
    <string name="ThighExtensionStudyButtonText">Thigh Extension Study</string>
    <string name="OptimizedThighExtensionStudyButtonText">Optimized Thigh Extension Study</string>
    <string name="Aim2ThighExtensionStudyButtonText">Aim 2 Thigh Extension Study</string>
    <string name="WalkingClassificationStudyButtonText">Walking Classification Study</string>
    <string name="ArmCuingStudyButtonText">Arm Cuing Study</string>
    <string name="ArmAngleStudyButtonText">Arm Angle Study</string>

    <!-- Participant Menu Page Strings -->
    <string name="ParticipantMenuHeaderText">Participant Menu</string>

    <!-- Test Haptic Cells Page Strings -->
    <string name="TestHapticCellsPageTitle">Test Haptic Cells</string>
    <string name="Module1Label">Module 1</string>
    <string name="Module2Label">Module 2</string>
    <string name="DeviceNumberLabel">Device Number:</string>
    <string name="DefaultIPAddress">IP Address:\nXXX.XXX.XXX.XXX</string>
    <string name="CellAButtonText">Cell A</string>
    <string name="CellBButtonText">Cell B</string>
    <string name="VibrationDurationLabel">Vibration Duration:</string>
    <string name="DefaultVibrationTime">0.25\nsec.</string>
    <string name="PlusButtonText">+</string>
    <string name="MinusButtonText">-</string>

    <!-- General Trial Page Strings -->
    <string name="SubjectNumber">Subject #:</string>
    <string name="NoDataPlaceholder">NO DATA</string>
    <string name="LeftArmLabel">Left Arm:</string>
    <string name="RightArmLabel">Right Arm:</string>
    <string name="LeftThighLabel">Left Thigh:</string>
    <string name="RightThighLabel">Right Thigh:</string>
    <string name="LeftFootLabel">Left Foot:</string>
    <string name="RightFootLabel">Right Foot:</string>
    <string name="SelectIMUsHeader">Select IMUs</string>
    <string name="SelectHapticCellsHeader">Select Haptic Cells</string>
    <string name="ConnectionStatusHeader">Connection Status</string>
    <string name="StartScanButtonText">Start Scan</string>
    <string name="StartSyncButtonText">Start Sync</string>
    <string name="DisconnectedIMUPlaceholder">Disconnected</string>
    <string name="ShowBatteryButtonText">Show Battery %</string>
    <string name="DisconnectIMUsButtonText">Disconnect IMUs</string>
    <string name="FeedbackTestHeader">Feedback Test Buttons</string>
    <string name="TrialModeHeader">Trial Mode</string>
    <string name="StartInitializationButtonText">Start\nInitialization</string>
    <string name="StartTrialButtonText">Start\nTrial</string>
    <string name="IMUOutputHeader">IMU Output</string>
    <string name="LeftSideLabelText">Left Side</string>
    <string name="RightSideLabelText">Right Side</string>
    <string name="ShowLogButtonText">Show Log</string>
    <string name="UploadDataToCloudButtonText">Upload Data\nTo Cloud</string>
    <string name="ExportIMURecordedDataButtonText">Export IMU Recorded Data</string>
    <string name="EnterSubjectAutofill">Enter Subject Number</string>
    <string name="EnterSubjectNumberHint">Subject #</string>
    <string name="LeftDeviceNumberLabel">Left Device Number:</string>
    <string name="RightDeviceNumberLabel">Right Device Number:</string>
    <string name="LeftEnterDeviceNumberAutoFill">Enter Left Device IP Number (0–255)</string>
    <string name="RightEnterDeviceNumberAutoFill">Enter Right Device IP Number (0–255)</string>
    <string name="LeftEnterDeviceNumberIPHint">Left Dev# (0–255)</string>
    <string name="RightEnterDeviceNumberIPHint">Right Dev# (0–255)</string>

    <!-- Original Thigh Extension Study Page Strings -->
    <string name="OriginalThighExtensionStudyPageTitle">Original Thigh Extension Study</string>
    <string name="LeftThighFeedbackButtonText">Left Thigh Feedback</string>
    <string name="RightThighFeedbackButtonText">Right Thigh Feedback</string>
    <string name="PTEGaitFeatureLabel">Last Stride PTE</string>
    <string name="CadenceGaitFeatureLabel">Last Stride Cad.</string>
    <string name="StrideLengthGaitFeatureLabel">Stride Length (m)</string>
    <string name="WalkingSpeedGaitFeatureLabel">Speed (m/s)</string>
    <string name="PTECycleCountLabel"># of PTEs</string>
    <string name="HeelStrikeCycleCountLabel"># of Heel Strikes</string>
    <string name="TargetAngleLabel">Target Angle</string>

    <!-- Optimized Thigh Extension Study Page Strings -->
    <string name="OptimizedThighExtensionStudyPageTitle">Optimized Thigh Extension Study</string>
    <string name="BothThighsFrontFeedbackButtonText">Both Thighs Front</string>
    <string name="LeftThighBackFeedbackButtonText">Left Thigh Back</string>
    <string name="RightThighBackFeedbackButtonText">Right Thigh Back</string>
    <string name="TargetCadenceLabel">Target Cadence</string>

    <!-- Arm Angle Feedback Study Page Strings -->
    <string name="ArmAngleFeedbackStudyPageTitle">Arm Angle Feedback Study</string>
    <string name="LeftArmFrontFeedbackButtonText">Left Arm Front Feedback</string>
    <string name="RightArmFrontFeedbackButtonText">Right Arm Front Feedback</string>
    <string name="LeftArmBackFeedbackButtonText">Left Arm Back Feedback</string>
    <string name="RightArmBackFeedbackButtonText">Right Arm Back Feedback</string>
    <string name="PeakArmExtensionAngleLabel">Last PAE Angle</string>"
    <string name="PeakArmFlexionAngleLabel">Last PAF Angle</string>
    <string name="NumberOfPeakArmExtensionsLabel"># of PAEs</string>"
    <string name="NumberOfPeakArmFlexionsLabel"># of PAFs</string>
    <string name="TargetLabel100Text">100% Target</string>"
    <string name="TargetLabel200Text">200% Target</string>
    <string name="ExtensionTargetAngleLabel">PAE Target</string>"
    <string name="FlexionTargetAngleLabel">PAF Target</string>

    <!-- Aim 2 Thigh Extension Study Page Strings -->
    <string name="Aim2ThighExtensionStudyPageTitle">Aim 2 Thigh Extension Study</string>
    <string name="SessionNumber">Session #:</string>"
    <string name="EnterSessionAutofill">Enter Session Number</string>
    <string name="EnterSessionNumberHint">Session #</string>

    <string-array name="IMU_MAC_Addresses">
        <item>--</item>
        <item>M–01</item>
        <item>M–02</item>
        <item>M–03</item>
        <item>M–04</item>
        <item>M–05</item>
        <item>M–06</item>
        <item>M–07</item>
        <item>M–08</item>
        <item>M–09</item>
        <item>M–10</item>
        <item>M–11</item>
        <item>M–12</item>
        <item>M–13</item>
        <item>M–14</item>
        <item>M–15</item>
        <item>M–16</item>
        <item>M–17</item>
        <item>M–18</item>
        <item>M–19</item>
        <item>M–20</item>
        <item>V2–01</item>
        <item>V2–02</item>
        <item>V2–03</item>
        <item>V2–04</item>
        <item>V2–05</item>
        <item>V2–06</item>
        <item>V2–07</item>
        <item>V2–08</item>
        <item>V2–09</item>
        <item>V2–10</item>
        <item>V2–11</item>
        <item>V2–12</item>
        <item>V2–13</item>
        <item>V2–14</item>
        <item>V2–15</item>
        <item>V2–16</item>
        <item>V2–17</item>
        <item>V2–18</item>
        <item>V2–19</item>
        <item>V2–20</item>
        <item>V1–01</item>
        <item>V1–02</item>
        <item>V1–03</item>
        <item>V1–04</item>
        <item>V1–05</item>
        <item>V1–06</item>
        <item>V1–07</item>
        <item>V1–08</item>
        <item>V1–09</item>
        <item>V1–10</item>
    </string-array>

    <string-array name="OriginalThighExtensionStudyTrialTypes">
        <item>Testing</item>
        <item>Baseline Normal</item>
        <item>Baseline with Cognitive Task</item>
        <item>Fast</item>
        <item>Positive Feedback Familiarization</item>
        <item>Error Feedback Familiarization</item>
        <item>Verbal Feedback</item>
        <item>Positive Feedback</item>
        <item>Error Feedback</item>
        <item>Verbal Feedback with Cognitive Task</item>
        <item>Positive Feedback with Cognitive Task</item>
        <item>Error Feedback with Cognitive Task</item>
        <item>Retention</item>
        <item>Retention with Cognitive Task</item>
    </string-array>

    <string-array name="OptimizedThighExtensionStudyTrialTypes">
        <item>Testing</item>
        <item>Baseline Normal</item>
        <item>Baseline with Cognitive Task</item>
        <item>Fast</item>
        <item>Optimization Familiarization</item>
        <item>Optimization Feedback</item>
        <item>Optimization Feedback with Cognitive Task</item>
    </string-array>

    <string-array name="ArmAngleStudyTrialTypes">
        <item>Testing</item>
        <item>Baseline Normal</item>
        <item>Fast</item>
        <item>Error Forward Feedback Familiarization</item>
        <item>Error Backward Feedback Familiarization</item>
        <item>Error Forward Feedback 100%</item>
        <item>Error Backward Feedback 100%</item>
        <item>Error Forward Feedback 200%</item>
        <item>Error Backward Feedback 200%</item>
        <item>Error Combined Feedback 100%</item>
        <item>Error Combined Feedback 200%</item>
    </string-array>

    <string-array name="Aim2ThighExtensionStudyFirstSessionTrialTypes">
        <item>Testing</item>
        <item>Baseline Normal</item>
        <item>Fast</item>
        <item>Error Feedback Familiarization</item>
        <item>Error Feedback</item>
        <item>Error Feedback 1</item>
        <item>Error Feedback 2</item>
        <item>Error Feedback 3</item>
        <item>Cooldown</item>
    </string-array>

    <string-array name="Aim2ThighExtensionStudyTrainingSessionsTrialTypes">
        <item>Testing</item>
        <item>Baseline Normal</item>
        <item>Error Feedback</item>
        <item>Error Feedback 1</item>
        <item>Error Feedback 2</item>
        <item>Error Feedback 3</item>
        <item>Cooldown</item>
    </string-array>

    <string-array name="Aim2ThighExtensionStudyRetentionSessionTrialTypes">
        <item>Testing</item>
        <item>Baseline Normal</item>
        <item>Fast</item>
        <item>Retention</item>
        <item>Cooldown</item>
    </string-array>


</resources>