<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/experimenter_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/menuPageBackgroundColor">

    <ImageView
        android:id="@+id/experimenter_menu_UMaineLogo"
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/UniversityOfMaineLogoImageDescription"
        android:src="@drawable/umaine_logo"/>

    <TextView
        android:id="@+id/experimenter_menu_PageTitle"
        style="@style/MenuPageTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/experimenter_menu_UMaineLogo"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:text="@string/StudySelectionMenuHeaderText"/>

    <View
        android:id="@+id/experimenter_menu_HorizontalLine1"
        android:background="?attr/menuPageTitleTextColor"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/experimenter_menu_PageTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"/>

    <View
        android:id="@+id/experimenter_menu_HorizontalLine2"
        android:background="?attr/menuPageTitleTextColor"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_above="@id/experimenter_menu_GoBack"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/experimenter_menu_GoBack"
        style="?attr/defaultButtonStyle"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="40dp"
        android:text="@string/GoBackButton"
        android:textSize="20sp"/>

    <ScrollView
        android:id="@+id/experimenter_menu_ContentScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/experimenter_menu_HorizontalLine1"
        android:layout_above="@+id/experimenter_menu_HorizontalLine2"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/experimenter_menu_CenterMark"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"/>

            <Button
                android:id="@+id/experimenter_menu_RecordIMUData"
                style="?attr/defaultButtonStyle"
                android:layout_width="180dp"
                android:layout_height="100dp"
                android:layout_alignParentTop="true"
                android:layout_toStartOf="@id/experimenter_menu_CenterMark"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/RecordIMUDataButtonText"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/experimenter_menu_TestHapticCells"
                style="?attr/defaultButtonStyle"
                android:layout_width="180dp"
                android:layout_height="100dp"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@id/experimenter_menu_CenterMark"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/TestHapticCellsButtonText"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/experimenter_menu_ThighExtensionStudy"
                style="?attr/defaultButtonStyle"
                android:layout_width="180dp"
                android:layout_height="100dp"
                android:layout_below="@id/experimenter_menu_RecordIMUData"
                android:layout_toStartOf="@id/experimenter_menu_CenterMark"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/ThighExtensionStudyButtonText"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/experimenter_menu_OptimizedThighExtensionStudy"
                style="?attr/defaultButtonStyle"
                android:layout_width="180dp"
                android:layout_height="100dp"
                android:layout_below="@id/experimenter_menu_TestHapticCells"
                android:layout_toEndOf="@id/experimenter_menu_CenterMark"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/OptimizedThighExtensionStudyButtonText"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/experimenter_menu_Aim2ThighExtensionStudy"
                style="?attr/defaultButtonStyle"
                android:layout_width="180dp"
                android:layout_height="100dp"
                android:layout_below="@id/experimenter_menu_ThighExtensionStudy"
                android:layout_toStartOf="@id/experimenter_menu_CenterMark"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/Aim2ThighExtensionStudyButtonText"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/experimenter_menu_WalkingClassificationStudy"
                style="?attr/defaultButtonStyle"
                android:layout_width="180dp"
                android:layout_height="100dp"
                android:layout_below="@id/experimenter_menu_OptimizedThighExtensionStudy"
                android:layout_toEndOf="@id/experimenter_menu_CenterMark"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/WalkingClassificationStudyButtonText"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/experimenter_menu_ArmCuingStudy"
                style="?attr/defaultButtonStyle"
                android:layout_width="180dp"
                android:layout_height="100dp"
                android:layout_below="@id/experimenter_menu_Aim2ThighExtensionStudy"
                android:layout_toStartOf="@id/experimenter_menu_CenterMark"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/ArmCuingStudyButtonText"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/experimenter_menu_ArmExtensionStudy"
                style="?attr/defaultButtonStyle"
                android:layout_width="180dp"
                android:layout_height="100dp"
                android:layout_below="@id/experimenter_menu_WalkingClassificationStudy"
                android:layout_toEndOf="@id/experimenter_menu_CenterMark"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/ArmAngleStudyButtonText"
                android:textSize="20sp"/>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>